--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
  build:
    docker:
-     - image: circleci/node:12-alpine
+     - image: circleci/node:v12.1.0
    steps:
      - checkout
      - run: echo "A first hello"
