--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,6 @@ jobs:
      - image: circleci/node:current
    steps:
      - checkout
-     - run: echo "A first hello"
+     - run: npm install
+     - run: npm run build
+     - run: npm run test
